--- a/_posts/2020-01-03-the-us-narrative-today.html
+++ b/_posts/2020-01-03-the-us-narrative-today.html
@@ -1511,107 +1511,107 @@ stories:
   domain: http://www.lacrossetribune.com/
   link: https://lacrossetribune.com/sports/football/professional/san-francisco-roars-back-into-playoffs-as-nfc-s-top/article_9b919d10-da34-5311-bcee-51f496b0be06.html
 images:
-- name: oldsmallboat-oldsmallboat-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-emily-carr.jpg
-- name: oldhouse-oldhouse-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-colorful-blocks.jpg
-- name: border-fence-border-fence-on-hill-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-neo-instinct.jpg
-- name: mosaic-face-mosaic-face-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-kand-two.jpg
-- name: machine-road-machine-road-free-woman.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-free-woman.jpg
-- name: beach-rocks-beach-rocks-currents-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-dark-soul.jpg
-- name: bf-skinner-old-piano-paris-hospital.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-old-piano-paris-hospital.jpg
-- name: two-sattelite-dishes-uncle-sam.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/two-sattelite-dishes-uncle-sam.jpg
-- name: victoria-victoria-corner-hotel-attack-planes.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/victoria-victoria-corner-hotel-attack-planes.jpg
-- name: capital-dc-flag-side-view-uncle-sam.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-dc-flag-side-view-uncle-sam.jpg
-- name: stories-new-desert-dragon-horiz-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-desert-dragon-horiz-circuit.jpg
-- name: statue-of-liberty-front-view-statueofliberty-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-yellow-paper.jpg
-- name: capital-battle-capitolbattle-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-internet-numbers.jpg
-- name: 35562068104_fa20c57575-scream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/35562068104_fa20c57575-scream.jpg
-- name: mistywoods-babyfoot-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-smoking-cigarette.jpg
-- name: mosaic-face-mosaic-face-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-colored-circuits.jpg
-- name: old-granary-field-oldhouse-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-deep-connections.jpg
-- name: gypsymosaic-gypsy-eyes-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-crabapple.jpg
-- name: rockingchair-rockingchair-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-gred-mash.jpg
-- name: bluelake-creativity-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-creativity-file-00-00-00-00.jpg
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-alien-goggles.jpg
-- name: san-francisco-street-view-san-francisco-street-view-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-colorful-dream.jpg
-- name: old-school-house-old-schoolhouse-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-cinnamon-rolls.jpg
-- name: lincoln-memorial-lincolnmemorial-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-oily-mcoilface.jpg
-- name: windowmountain-window-mountain-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-internet-numbers.jpg
-- name: pigeons-on-the-ledge-pigeons-on-ledge-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-emily-carr.jpg
-- name: oldsmallboat-oldsmallboat-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-cinnamon-rolls.jpg
-- name: old-house-oldhouse-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-monet-one.jpg
-- name: old-school-house-old-schoolhouse-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-atari-missle.jpg
-- name: udnie-IMG_8471.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-IMG_8471.jpg
-- name: berlinwall2-berlinwall-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-dark-rain.jpg
-- name: oldroad-old-road-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-dali-three.jpg
-- name: status-berlin-status-berlin-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-gred-mash.jpg
-- name: white-house-lawn-white-house-window-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-dark-dali.jpg
-- name: old-barn-old-barn-1500-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-mucha-mult.jpg
-- name: mosaic-face-mosaic-face-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-crafty-painting.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-pablo-blue.jpg
-- name: pigeons-on-the-ledge-pigeons-on-ledge-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-graham-sutherland.jpg
-- name: aws-s3-stories-new-68-158-800-500-0-max-0-1--1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-68-158-800-500-0-max-0-1--1.jpg
-- name: nazi-invasion-roman-marcus-looking-down.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-roman-marcus-looking-down.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-copper-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-copper-circuit.jpg
-- name: copper-circuit-subway-underground_36599191851_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-subway-underground_36599191851_o.jpg
-- name: san-francisco-street-view-san-francisco-street-view-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-yellow-paper.jpg
-- name: lincoln-memorial-lincolnmemorial-propaganda-leaflets.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-propaganda-leaflets.jpg
-- name: crow_spagetti_accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_spagetti_accident.jpg
-- name: old-door-lock-old-door-lock-2-blue-circuit-5.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-blue-circuit-5.jpg
-- name: castle-on-hill-castle-on-hill-edinburgh-nazi-poster.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-nazi-poster.JPG
-- name: berlinwall2-berlinwall-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-kand-two.jpg
-- name: san-francisco-city-bridge-sf-city-bridge-blue-circuit-4.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-blue-circuit-4.jpg
-- name: wind-mills-windmills.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills.jpg
-- name: rockingchair-rockingchair-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-purp-paper.jpg
+- name: nazi-invasion-docks-in-itealy-tower.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-docks-in-itealy-tower.jpg
+- name: stories-dragon-close-up-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-dragon-close-up-clean-view.jpg
+- name: meadowbutterfly-meadow-butterfly-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-space-pizza.jpg
+- name: oldsmallboat-oldsmallboat-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-atari-asteroids.jpg
+- name: window-window-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-dark-dali.jpg
+- name: bf-skinner-statue-of-liberty_36744433525_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-statue-of-liberty_36744433525_o.jpg
+- name: hollywood-building-hollywood-building-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-purple-storm.jpg
+- name: old-door-lock-old-door-lock-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-dali-two.jpg
+- name: castle-wall-DSC-0067-dali-three.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-dali-three.JPG
+- name: nazi-invasion-train-coming-up-tracks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-train-coming-up-tracks.jpg
+- name: crow_atari_asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_atari_asteroids.jpg
+- name: old-door-lock-old-door-lock-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-crunch-paper.jpg
+- name: lincoln-memorial-lincolnmemorial-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-space-pizza.jpg
+- name: mosaic-face-mosaic-face-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-blue-electricity.jpg
+- name: old-door-lock-old-door-lock-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-hot-spicy.jpg
+- name: aws-s3-square-C2zqzsfVIAA2hcM.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-C2zqzsfVIAA2hcM.jpg
+- name: fence-mexico-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-spagetti-accident.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-atari-missle.jpg
+- name: abe_lincoln_one-oily_mcoilface-file-00_00_15_87.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe_lincoln_one-oily_mcoilface-file-00_00_15_87.jpg
+- name: blossombar-deep-connections-file-00-00-50-62.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-deep-connections-file-00-00-50-62.jpg
+- name: wave-DSC_0087.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wave-DSC_0087.jpg
+- name: gypsymosaic-gypsy-eyes-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-kandinsky-bv.jpg
+- name: old-house-oldhouse-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-colorful-dream.jpg
+- name: white-house-whitehouse-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-atari-missle.jpg
+- name: status-berlin-status-berlin-blue-circuit-5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-blue-circuit-5.jpg
+- name: castle-wall-DSC-0067-colorful-dream.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-colorful-dream.JPG
+- name: mediterranean-mediterranean-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-green-zuma.jpg
+- name: oldsmallboat-oldsmallboat-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-mucha-mult.jpg
+- name: redondo-beach-harbor-redondo-beach-harbor-blue-circuit-4.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-blue-circuit-4.jpg
+- name: bf-skinner-hallway-mirrors-hotel.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-hallway-mirrors-hotel.jpg
+- name: paris-paris-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-atari-asteroids.jpg
+- name: fence-mexico-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-colorful-dream.jpg
+- name: stalin-time-old-house_36681740046_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-old-house_36681740046_o.jpg
+- name: razorwire-DSC-0080-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-atari-missle.jpg
+- name: berlinwall-DSC-0084-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-colored-circuits.jpg
+- name: meadowbutterfly-meadow-butterfly-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-diego-rivera1.jpg
+- name: containership-bw-storytelling-blue-circuit.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-bw-storytelling-blue-circuit.png
+- name: eduardo-eduardo-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-neo-instinct.jpg
+- name: braceros-domingo-ulloa-old-church_36588495271_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-old-church_36588495271_o.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-green-zuma.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-green-zuma.png
+- name: castle-on-hill-castle-on-hill-edinburgh-constitution.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-constitution.JPG
+- name: san-francisco-city-bridge-sf-city-bridge-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-crafty-painting.jpg
+- name: adam-smith-adam-smith-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-green-zuma.jpg
+- name: old-gas-pumps-oldgaspumps-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-nazi-poster.jpg
+- name: beach-clouds-lifeguard-beachclouds-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-kand-two.jpg
+- name: fence-mexico-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-purp-paper.jpg
+- name: aws-s3-mountainlake-mountainlake-still.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-mountainlake-mountainlake-still.jpg
+- name: school-clouds-church-clouds-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-purp-paper.jpg
+- name: birdhouse-birdhouse-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-crunch-paper.jpg
+- name: supreme-court-supremecourt-feed-people.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-feed-people.jpg
+- name: containership-containership-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-crunch-paper.jpg
 ---
 Congress Divided Over Airstrike Killing Iranian Official.&nbsp;Virginia Traffic Laws And Why You Might Need An Attorney.&nbsp;Lady Indians Basketball Pick Up Wins.&nbsp;Geometry Global And MediaINFO Digital Library.&nbsp;Library To Host Program On Beekeeping.&nbsp;Congress Divided Over Airstrike Killing Iranian Official.&nbsp;Doggin It At Christmas.&nbsp;The Cranes Are Back In Town.&nbsp;
